# nand2tetris

./: .gitignore  README.md
HackFPGA/COE/: mult.asm  mult.coe  mult_data.coe
HackFPGA/Constraints/: top.xdc
HackFPGA/IP/blk_mem_gen_data_ram/: blk_mem_gen_data_ram.xci
HackFPGA/IP/blk_mem_gen_inst_rom/: blk_mem_gen_inst_rom.xci
HackFPGA/IP/blk_mem_gen_video_ram/: blk_mem_gen_video_ram.xci
HackFPGA/RTL/: ALU.vhd  CPU.vhd  Computer.vhd  PC.vhd
HackFPGA/Testbench/: test_Computer.vhd  test_PC.vhd
HackFPGA/Work/: Hack.xpr  test_Computer_behav.wcfg
projects/01/: DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux8Way16.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  FullAdder.hdl
projects/03/a/: Bit.hdl  PC.hdl
projects/04/fill/: Fill.asm  Fill.hack
projects/04/mult/: mult.hack
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl  Pong.tst
projects/06/: assembler.py
projects/07/VMTranslator/: CMakeLists.txt  main.cpp
projects/08/VMTranslator/: main.cpp
projects/09/compiler/: README.md  package.yaml
projects/09/compiler/app/: Main.hs
projects/10/compiler/: LICENSE  README.md  package.yaml
projects/10/compiler/app/: Main.hs
projects/10/compiler/src/: CodeGen.hs  Grammar.hs  InputHandler.hs  Instructions.hs  Lib.hs  Parser.hs  XmlJack.hs
projects/10/compiler/test/: RandGrammar.hs  Spec.hs
projects/11/ConvertToBin/: Main.jack
